@@ -17,6 +17,8 @@ class AddRTLMarker(Filter):
         (<arabic>)<arabic>
     Also if linebreaks are present inbetween.
 
+    [baa][alif]
+
     The heuristic fails if the string also contains latin text, e.g.
         <english> (<english> <arabic>)
 
@@ -25,8 +27,10 @@ class AddRTLMarker(Filter):
     """
 
     def run(self, text, card, fact_key, **render_args):
+        # If we start with latin, we'll keep the paragraph ordering as ltr.
+        if text and not (0x0590 <= ord(text.lstrip("()[]{}")[0]) <= 0x06FF):
+            return text
         for i in range(len(text)):
             if 0x0590 <= ord(text[i]) <= 0x06FF:
-                return "&rlm;" + text.replace("\n", "&rlm;\n&rlm;").\
-                    replace("<br>", "&rlm;<br>&rlm;") + "&rlm;"
+                return "<p dir=\"rtl\">" + text + "</p>"
         return text
