@@ -25,7 +25,7 @@
         </font>
        </property>
        <property name="text">
-        <string>(fact view name)</string>
+        <string></string>
        </property>
       </widget>
      </item>
